# hytek-tools

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  ROADMAP.md  pyproject.toml
.cursor/rules/: current-goal.md  hytek-tools.md
PG/: Meet Results-PG vs Souderton 062526-25Jun2026-Souderton Dolphins-MA-001.cl2  Meet Results-PG vs Souderton 062526-25Jun2026-Souderton Dolphins-MA-001.hy3  roster.csv
sample/: Meet Results-TOW vs SOUD 062326-23Jun2026-001.cl2  Meet Results-TOW vs SOUD 062326-23Jun2026-001.hy3  Meet Results-TOW vs SOUD 062326-23Jun2026-Souderton Dolphins-MA-001.cl2  Meet Results-TOW vs SOUD 062326-23Jun2026-Souderton Dolphins-MA-001.hy3  MeetResults-fixed.cl2  MeetResults-mi-fixed.cl2  customexport (2).xlsx
samples/: meet.hy3
scripts/: bootstrap.sh
src/hytek_tools/: __init__.py
src/hytek_tools/cli/: __init__.py  main.py
src/hytek_tools/inspect/: __init__.py  cl2_diff.py  cl2_swimmer_diff.py  cl2_trace.py  hy3_catalog.py  hy3_dump.py  hy3_stats.py
src/hytek_tools/models/: __init__.py  enums.py  event.py  meet.py  record.py  relay.py  result.py  swimmer.py  team.py
src/hytek_tools/parsers/: __init__.py
src/hytek_tools/parsers/cl2/: __init__.py  d01.py  extractor.py  models.py  reader.py  record.py  (+1 more)
src/hytek_tools/teamunify/: __init__.py  audit.py  compare.py  match_report.py  matcher.py  models.py  roster.py  validation.py
tests/cli/: test_audit_command.py  test_compare_command.py  test_diff_cl2_command.py  test_diff_swimmer_command.py  test_dump.py  test_fix_cl2_command.py  test_inspect.py  test_match_report.py  test_roster_command.py  test_swimmers_command.py  test_trace_command.py
tests/inspect/: test_cl2_diff.py  test_cl2_swimmer_diff.py  test_cl2_trace.py  test_hy3_catalog.py  test_hy3_dump.py  test_hy3_stats.py
tests/models/: test_models.py
tests/parsers/cl2/: test_d01.py  test_extractor.py
tests/parsers/hy3/: test_d1.py  test_reader.py
tests/teamunify/: test_audit.py  test_compare.py  test_matcher.py  test_report.py  test_roster.py  test_validation.py
tests/writers/cl2/: test_middle_initial.py  test_teamunify_id.py
(+7 files in other folders)
