[project]
name = "hytek-tools"
version = "0.1.0"
description = "Toolkit for reading, validating, and converting HY-TEK swimming meet files"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
hytek = "hytek_tools.cli.main:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
